--- a/iot/deployment.yaml
+++ b/iot/deployment.yaml
@@ -1,3 +1,19 @@
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mosquitto-service
+  labels:
+    run: mosquitto
+spec:
+  type: NodePort
+  ports:
+  - port: 1883
+    protocol: TCP
+    targetPort: 1883
+  selector:
+    app: mosquitto
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
