--- a/capture/Makefile
+++ b/capture/Makefile
@@ -2,14 +2,13 @@ login:
 	docker login
 
 build:
-	docker build -t kkasravi/mosquitto-listener:v1 .
+	docker build -t kkasravi/camera:v1 .
 
 push:
-	docker push kkasravi/mosquitto-listener:v1
+	docker push kkasravi/camera:v1
 
 deploy:
 	kubectl apply -f deployment.yaml
 
 undeploy:
 	kubectl delete -f deployment.yaml
-
