--- a/listener/deployment.yaml
+++ b/listener/deployment.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: listener
+  name: mosquitto-listener
 spec:
   selector:
     matchLabels:
-      app: listener
+      app: mosquitto-listener
   replicas: 1 # tells deployment to run 1 pods matching the template
   template:
     metadata:
       labels:
-        app: listener
+        app: mosquitto-listener
     spec:
       containers:
-      - name: listener
-        image: kkasravi/listener:v1
+      - name: mosquitto-listener
+        image: kkasravi/mosquitto-listener:v1
